apps/eck/kibana.yml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kibana
  labels:
    name: kibana
  annotations:
    kube-score/ignore: |
      ingress-targets-service
spec:
  rules:
    - host: kibana.eck.lab
      http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: kibana-kb-http
                port:
                  number: 5601
